<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CadClienteActivity"
    tools:showIn="@layout/activity_cad_cliente">

    <TextView
        android:id="@+id/textNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lbl_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textNome"
        app:layout_constraintStart_toStartOf="@+id/textNome"
        app:layout_constraintTop_toBottomOf="@+id/textNome" />

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_endereco"
        app:layout_constraintEnd_toEndOf="@+id/editCpf"
        app:layout_constraintStart_toStartOf="@+id/editCpf"
        app:layout_constraintTop_toBottomOf="@+id/editCpf" />

    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txtEndereco"
        app:layout_constraintStart_toStartOf="@+id/txtEndereco"
        app:layout_constraintTop_toBottomOf="@+id/txtEndereco" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_email"
        app:layout_constraintEnd_toEndOf="@+id/edtTelefone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefone" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/lbl_telefone"
        app:layout_constraintEnd_toEndOf="@+id/edtEndereco"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEndereco"
        app:layout_constraintTop_toBottomOf="@+id/edtEndereco" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txtTelefone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />

    <TextView
        android:id="@+id/textCPF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_Cpf"
        app:layout_constraintEnd_toEndOf="@+id/edtNome"
        app:layout_constraintStart_toStartOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/editCpf"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textCPF"
        app:layout_constraintStart_toStartOf="@+id/textCPF"
        app:layout_constraintTop_toBottomOf="@+id/textCPF" />

    <TextView
        android:id="@+id/textSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_Senha"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textSenha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textSenha"
        app:layout_constraintTop_toBottomOf="@+id/textSenha" />

    <TextView
        android:id="@+id/txtMunicipio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_municipio"
        app:layout_constraintStart_toStartOf="@+id/edtEndereco"
        app:layout_constraintTop_toBottomOf="@+id/edtEndereco" />

    <EditText
        android:id="@+id/edtMunicipio"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/edtEndereco"
        app:layout_constraintTop_toBottomOf="@+id/edtEndereco" />

    <TextView
        android:id="@+id/txtUF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_uf"
        app:layout_constraintStart_toStartOf="@+id/edtEndereco"
        app:layout_constraintTop_toBottomOf="@+id/edtEndereco" />
    

    <EditText
        android:id="@+id/editUF"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/edtEndereco"
        app:layout_constraintTop_toBottomOf="@+id/edtEndereco" />

</android.support.constraint.ConstraintLayout>